Fixed overflow

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow: hidden;
+}
+
 #canvas {
     background: radial-gradient(circle, rgba(65,255,65,1) 0%, rgba(161,203,252,1) 100%);
 }
